--- a/Market_Research_Dashboard.ipynb
+++ b/Market_Research_Dashboard.ipynb
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Market Research Dashboard\n",
+        "# Project Title: Prediction of Product Sales\n",
         "\n",
         "- Author: Elleryn Christine Carreon\n"
       ],
